--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,5 +26,18 @@ services:
     ports:
       - "8888:80"
 
+  flask-api:
+    build: jcompany/.
+    restart: always
+    ports:
+      - "5000:5000"
+    depends_on:
+      - db
+    environment:
+      MYSQL_HOST: db
+      MYSQL_USER: admin
+      MYSQL_PASSWORD: admin
+      MYSQL_DATABASE: jcompany
+
 volumes:
   db:
