--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,14 @@ version: '3.1'
 services:
   db:
     image: mysql:5.7
-    # command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
       MYSQL_DATABASE: jcompany
       MYSQL_USER: admin
       MYSQL_PASSWORD: admin
       MYSQL_RANDOM_ROOT_PASSWORD: '1'
+    volumes:
+      - ./init:/docker-entrypoint-initdb.d
     ports:
       - "3306:3306"
 
